added initial styling

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,31 @@
+@font-face {
+    font-family: mbold;
+    src: url(public/css/mbold.ttf);
+}
+
+@font-face {
+    font-family: mlight;
+    src: url(public/css/mlight.ttf);
+}
+
+@font-face {
+    font-family: mreg;
+    src: url(public/css/mreg.ttf);
+}
+
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: mreg;
+}
+
+.error {
+    background-color: red;
+    color: white;
+    text-align: center;
+    border-radius: 5px;
+    margin: 5px 0;
 }
 
 .access-point {
@@ -21,14 +45,21 @@
     border: 1px solid #808080;
 }
 
+.access-point h2 {
+    text-align: center;
+    color:#0b0ba5
+}
+
 .access-point input {
     margin-bottom: 7px;
+    padding: 4px;
 }
 
 .access-point input[type="submit"] {
     background-color: #0b0ba5;
     border: 1px solid #0b0ba5;
     color: #ffffff;
+    letter-spacing: 2px;
 }
 
 .access-point a {
