updated login page

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,6 +2,8 @@
 
 <main class="access-point">
     <form action="/login" method="post">
+        <h2>Login</h2>
+
 
         <% if (error) {%>
             <p class="error"><%= message %></p>
