updated signup page

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -16,7 +16,7 @@
         <input type="password" name="password" id="" value="<%= user.password %>" required  minlength="8">
         <label for="">Confirm Password</label>
         <input type="password" name="confirmPassword" value="<%= user.confirmPassword %>" id="" required  minlength="8">
-        <input type="submit" value="Login" required>
+        <input type="submit" value="signup" required>
         <p>Have an account already? <a href="/login">Login</a></p>
     </form>
 </main>
