--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,8 @@
 <%- include('partials/header')%>
-    <h1>hello world</h1>
+<%- include('partials/nav')  %>
+    <main class="container">
+        <h2>Welcome <%= locals.username %></h2>
+    </main>
+    
     
 <%- include('partials/footer')%>
