--- a/public/css/style.css
+++ b/public/css/style.css
@@ -72,6 +72,19 @@
 .access-point a:hover {
     text-decoration: underline;
 }
+.not-logged-in {
+    background-image: url(../images/backgroundImage.jpg);
+    /* background-position: center; */
+    height: 100vh;
+    color: #ffffff;
+
+}
+
+.not-logged-in h2{
+    text-align: center;
+    margin-top: 150px;
+    font-size: 67px;
+}
 
 .container {
     padding: 0 150px;
@@ -104,4 +117,19 @@ nav a {
     text-decoration: none;
     color: #0b0ba5;
     font-size: 18px;
+}
+
+#create-post {
+    display: flex;
+    flex-direction: column;
+}
+
+#create-post input[type="submit"] {
+    background-color: #0b0ba5;
+    border: 1px solid #0b0ba5;
+    border-radius: 5px;
+    color: #ffffff;
+    padding: 4px 8px;
+    width: max-content;
+    margin-top: 5px;
 }
