--- a/public/css/style.css
+++ b/public/css/style.css
@@ -122,6 +122,7 @@ nav a {
 #create-post {
     display: flex;
     flex-direction: column;
+    margin-bottom: 15px;
 }
 
 #create-post input[type="submit"] {
@@ -132,4 +133,39 @@ nav a {
     padding: 4px 8px;
     width: max-content;
     margin-top: 5px;
+}
+
+.post {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 5px;
+    width: 600px;
+
+}
+
+.avatar {
+    width: 60px;
+    height: 60px;
+    margin-right: 10px;
+}
+
+.avatar img {
+    width: 100%;
+    border-radius: 50%;
+}
+
+.post-info {
+    width: 530px;
+}
+
+.post-info > div {
+    display: flex;
+    align-items: end;
+}
+
+.post-info .btns a {
+    color: #0b0ba5;
+    text-decoration: none;
+    margin-right: 10px;
+
 }
