--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,9 +24,19 @@
                     <p><%= post.post %></p>
                     <div>
                         <div class="btns">
-                            <a href="">Like</a>
+
+                            <!-- like button -->
+                            <form action="/like-post/<%= post.p_id %>" method="post">
+                                <input type="submit" value="Like">
+                            </form>
+                
+
+                            <!-- show delete button if user is author of post -->
                             <% if (userID === post.u_id) { %>
-                                <a href="">Delete</a>
+                                <form action="/delete-post/<%= post.p_id %>" method="post">
+                                    <input type="submit" value="Delete">
+                                </form>
+                    
                             <% } %>
                         </div>
                         <small><em><%= post.created_at.toString().split(' GMT')[0] %></em></small>
