--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -4,7 +4,7 @@
         <ul>
 
             <% if (locals.isLoggedIn) { %>
-                <li><a href="">My Posts</a></li>
+                <li><a href="/posts">My Posts</a></li>
                 <li><a href="/likes">Likes</a></li>
                 <li><a href="/logout">Logout</a></li>
            <% } else { %>
