--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,11 +25,12 @@
                     <div>
                         <div class="btns">
 
-                            <!-- like button -->
+                            <!--show like button if post is not liked -->
                             <form action="/like-post/<%= post.p_id %>" method="post">
                                 <input type="submit" value="Like">
                             </form>
-                
+
+                            <!-- show unlike button if posts is not liked already -->
 
                             <!-- show delete button if user is author of post -->
                             <% if (userID === post.u_id) { %>
