--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -6,6 +6,7 @@
             <% if (locals.isLoggedIn) { %>
                 <li><a href="/posts">My Posts</a></li>
                 <li><a href="/likes">Likes</a></li>
+                <li><a href="/profile/<%= locals.userID %>">Profile</a></li>
                 <li><a href="/logout">Logout</a></li>
            <% } else { %>
             <li><a href="/signup">Signup</a></li>
