--- a/public/css/style.css
+++ b/public/css/style.css
@@ -179,3 +179,21 @@ nav a {
 .post-info .btns input[type="submit"]:hover  {
     border-bottom: 1px solid #0b0ba5;
 }
+
+#profile {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+#profile #avatar {
+    width: 60px;
+    height: 60px;
+}
+
+#profile #avatar img {
+    width: 100%;
+    border-radius: 50%;
+}
+
