--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
                    <img src="/images/profile_pictures/<%= post.picture %>" alt="">
                 </div>
                 <div class="post-info">
-                    <h3><%= post.username%></h3>
+                    <h3><a href="/profile/<%= post.u_id %>"><%= post.username %></a></h3>
                     <p><%= post.post %></p>
                     <div>
                         <div class="btns">
