--- a/public/css/style.css
+++ b/public/css/style.css
@@ -205,9 +205,9 @@ nav a {
     height: 60px;
 }
 
-#profile #form {
+/* #profile #form {
     display:  none;
-}
+} */
 
 #profile #avatar img {
     width: 100%;
