--- a/views/likes.ejs
+++ b/views/likes.ejs
@@ -13,7 +13,7 @@
                      <div class="btns">
 
                          <!-- like button -->
-                         <form action="/like/unlike-post/<%= post.p_id %>" method="post">
+                         <form action="/likes/unlike-post/<%= post.p_id %>" method="post">
                              <input type="submit" value="unlike">
                          </form>
              
