updated view for profile

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -11,8 +11,8 @@
             <p><%= user.gender %></p>
 
            <%  if (user.u_id === userID) { %>
-               <a href="" id="btn-edit">Edit profile</a>
-               <div id="form">
+               <a href="/edit-profile" id="btn-edit">Edit profile</a>
+               <!-- <div id="form">
                 <form action="/edit-profile/<%= user.u_id %>" method="post" enctype="multipart/form-data">
                   <label for="">Full Name</label>
                   <input type="text" name="fullname" id="" value="<%= user.username %>">
@@ -50,11 +50,11 @@
                    <input class="btn"  type="submit" value="Update">
                   </div>
               </form>
-               </div>
+               </div> -->
           <%  } %>
         </div>
       </main>
-      <script>
+      <!-- <script>
         let editBtn = document.querySelector("#btn-edit")
         let canceBtn = document.querySelector('#btn-cancel')
         let form = document.querySelector('#form')
@@ -68,6 +68,6 @@
           e.preventDefault()
           form.style.display = 'none'
         })
-      </script>
+      </script> -->
 
 <%- include('partials/footer') %>
