--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -54,7 +54,7 @@
           <%  } %>
         </div>
       </main>
-      <!-- <script>
+      <script>
         let editBtn = document.querySelector("#btn-edit")
         let canceBtn = document.querySelector('#btn-cancel')
         let form = document.querySelector('#form')
@@ -68,6 +68,6 @@
           e.preventDefault()
           form.style.display = 'none'
         })
-      </script> -->
+      </script>
 
 <%- include('partials/footer') %>
